Sugati/src/objects/Supplier_Contact__c.object
<CustomObject>
    <description>A list of contacts from the suppliers</description>
    <fields>
        <fullName>Marketing_Consortium__c</fullName>
        <description>Marketing Consortia for OTUK reports</description>
        <label>Marketing Consortium</label>
        <picklist>
            <picklistValues>
                <fullName>Virtuoso</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Signature</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ensemble</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TravellerMade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Travel leaders</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None/Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SC_Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>SC_First_Name__c</fullName>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SC_Last_Name__c</fullName>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SC_Mobile__c</fullName>
        <label>Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>SC_Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>SC_Salutations__c</fullName>
        <label>Salutations</label>
        <picklist>
            <picklistValues>
                <fullName>Mr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mrs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Miss</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prof</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SC_Supplier__c</fullName>
        <label>Supplier</label>
        <referenceTo>Supplier__c</referenceTo>
        <relationshipLabel>Supplier Contacts</relationshipLabel>
        <relationshipName>Supplier_Contacts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SC_Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Availability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Registration</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <label>Supplier Contact</label>
    <nameField>
        <displayFormat>SC-{0000000000}</displayFormat>
        <label>Supplier Contact ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Supplier Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>